refactor: optimize GC performance, implement GameLoop thread selection, and consolidate constants